# Aethera

./: README.md
docs/: Aethera-Documentation.docx  Aethera-Presentation.pptx
src/: .gitignore  CMakeLists.txt  home.cpp  home.h  home.ui  main.cpp
src/assets/: aethera.db  icons.qrc
src/core/: database.cpp  database.h  usersession.cpp  usersession.h
src/core/crypto/: passwordhasher.cpp  passwordhasher.h
src/core/db/: database.cpp  database.h
src/core/session/: usersession.cpp  usersession.h
src/core/utils/: utils.cpp  utils.h
src/ui/exam/: exam.cpp  exam.h  exam.ui  exams.cpp  question.h  style.h
src/ui/exam/difficulties/: difficulties.cpp  difficulties.h  difficulties.ui
src/ui/exam/history/: history.cpp  history.h  history.ui  style.h
src/ui/exam/results/: results.cpp  results.h  results.ui
src/ui/exam/review/: review.cpp  review.h  review.ui  style.h
src/ui/exam/session/: questionsBank.h  session.cpp  session.h  session.ui  style.h
src/ui/exam/subjects/: subjects.cpp  subjects.h  subjects.ui
src/ui/examhistory/: examhistory.cpp  examhistory.h  examhistory.ui
src/ui/home/: home.cpp  home.h  home.ui  home_styles.h
src/ui/inbox/: inbox.cpp  inbox.h  inbox.ui
src/ui/lessons/: lessons.cpp  lessons.h  lessons.ui
src/ui/lessons/FlashcardSession/: flashcardsession.cpp  flashcardsession.h  flashcardsession.ui
src/ui/lessons/Flashcarddeck/: flashcarddeck.cpp  flashcarddeck.h  flashcarddeck.ui
src/ui/login/: login.cpp  login.h  login.ui  register.cpp  register.h  register.ui
src/ui/profile/: profile.cpp  profile.h  profile.ui
src/ui/register/: register.cpp  register.h  register.ui
src/ui/schedule/: schedule.cpp  schedule.h  schedule.ui
src/ui/settings/: settings.cpp  settings.h  settings.ui
src/ui/sidebar/: sidebar.cpp  style.h
src/ui/statistics/: statistics.cpp  statistics.h  statistics.ui
